# Reqable-Mcp

./: .gitignore  README.md  install.sh  install_hook.sh  pyproject.toml  uninstall.sh  uninstall_hook.sh
.spec/reqable-mcp/: checklist.md  spec.md  tasks.md
src/reqable_mcp/: __init__.py  __main__.py  daemon.py  db.py  dry_run.py  mcp_server.py  paths.py  proxy_guard.py  relay.py  rules.py  schema.sql  wait_queue.py
src/reqable_mcp/hook/: __init__.py  deploy.py  install.py
src/reqable_mcp/hook/template/: addons.py  main.py  reqable.py
src/reqable_mcp/ipc/: __init__.py  protocol.py  server.py
src/reqable_mcp/sources/: body_source.py  flatbuffers_reader.py  lmdb_source.py  objectbox_meta.py
src/reqable_mcp/tools/: analysis.py  export.py  query.py  replay.py  rules.py  wait.py
tests/: conftest.py  test_body_source.py  test_daemon.py  test_daemon_ipc.py  test_db.py  test_dry_run.py  test_e2e.py  test_flatbuffers_reader.py  test_hook_deploy.py  test_hook_e2e.py  test_hook_install.py  test_ipc_protocol.py  test_ipc_server.py  test_lmdb_source.py  test_objectbox_meta.py  test_paths.py  test_proxy_guard.py  test_relay.py  test_rules.py  test_tools_analysis.py  test_tools_export.py  test_tools_query.py  test_tools_replay.py  test_tools_rules.py  test_tools_wait.py  test_wait_queue.py
