[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reqable-mcp"
version = "0.1.0a1"
description = "Local MCP server that exposes Reqable's captured HTTP/HTTPS traffic to Claude Code via read-only LMDB access."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "reqable-mcp contributors" }]
keywords = ["mcp", "reqable", "http", "proxy", "claude", "anthropic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "lmdb>=1.4,<2.0",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.8",
]
# Optional codecs for ``decode_body`` / ``prettify`` / ``dump_body``.
# Without these the tools still work for gzip / deflate; brotli and
# zstd are no-ops with a clean error.
export = [
  "brotli>=1",
  "zstandard>=0.20",
]
# Pulls in mitmproxy itself for the ``export_mitmproxy_flow`` tool.
# It's a heavy dependency (~100 MB across mitmproxy + cryptography +
# tornado + pyOpenSSL + …), so it's its own extra rather than rolled
# into ``export``. Only install if you actually want to feed flows
# into mitmproxy's tooling.
mitmproxy = [
  "mitmproxy>=10",
]

[project.scripts]
reqable-mcp = "reqable_mcp.__main__:main"

[project.urls]
Spec = "https://github.com/reqable-mcp/reqable-mcp/tree/main/.spec/reqable-mcp"

[tool.setuptools.packages.find]
where = ["src"]
include = ["reqable_mcp*"]

[tool.setuptools.package-data]
reqable_mcp = ["schema.sql", "hook/template/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"
# Hook templates ship as deployable assets — they import reqable.py
# (Reqable's own SDK) which only resolves at runtime in the deployed
# directory. Skip them from lint/format.
extend-exclude = ["src/reqable_mcp/hook/template/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # 超长由格式化器处理

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["src/reqable_mcp/hook/template/.*"]

# mitmproxy is an optional dep that internally uses Python 3.12+
# syntax (type statement). We import it dynamically with try/except,
# so mypy doesn't need to analyze it — skipping its imports stops
# mypy from blowing up on a downstream syntax mismatch.
[[tool.mypy.overrides]]
module = "mitmproxy.*"
follow_imports = "skip"
